<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="fill_parent" android:layout_height="wrap_content"
	tools:context=".ShowCandidates" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|fill_vertical"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/main_activity_gradient"
            android:contentDescription="@string/logo_imagen"
            android:maxHeight="@dimen/activity_vertical_margin"
            android:maxWidth="@dimen/activity_horizontal_margin"
            android:padding="0dp"
            android:paddingLeft="0dp"
            android:paddingTop="0dp"
            android:scaleType="center"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/texto_pregunta"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/label_candidate_selected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto_ayuda"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#888888" />

        <RadioGroup
            android:id="@+id/radioGroupCandidates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:scrollbars="vertical" >

             <TextView
                 android:id="@+id/titulo_nuevamayoria"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/titulo_nuevamayoria"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textColor="#D7383E" />
             
            <RadioButton
                android:id="@+id/radio1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/candidato_1"
                android:onClick="onRadioButtonClicked" />

            <RadioButton
                android:id="@+id/radio2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/candidato_2"
                android:onClick="onRadioButtonClicked" />

            <RadioButton
                android:id="@+id/radio3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/candidato_3" 
                android:onClick="onRadioButtonClicked"/>

            <RadioButton
                android:id="@+id/radio4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/candidato_4" 
                android:onClick="onRadioButtonClicked"/>
            
        <TextView
            android:id="@+id/titulo_alianza"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo_alianza"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#D7383E" />

       

            <RadioButton
                android:id="@+id/radio5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/candidato_5" 
                android:onClick="onRadioButtonClicked"/>

            <RadioButton
                android:id="@+id/radio6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/candidato_6" 
                android:onClick="onRadioButtonClicked"/>
        </RadioGroup>

        <Button
            android:id="@+id/enviar_resultados"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enviar_btn" />

    </LinearLayout>

</ScrollView>