<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:scrollbars="horizontal"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@color/main_activity_gradient"
        android:gravity="center|fill_vertical"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logo_imagen"
            android:maxHeight="@dimen/activity_vertical_margin"
            android:maxWidth="@dimen/activity_horizontal_margin"
            android:paddingTop="5dp"
            android:scaleType="center"
            android:src="@drawable/logo" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/aceptar"
        android:layout_alignRight="@+id/enviar_resultados"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="14dp"
        android:gravity="fill|center|top"
        android:text="@string/descripcion_texto"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/enviar_resultados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/aceptar"
        android:layout_alignRight="@+id/linearLayout1"
        android:layout_marginRight="20dp"
        android:text="@string/cancelar_btn" />

    <Button
        android:id="@+id/aceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="18dp"
        android:text="@string/aceptar_btn" />

</RelativeLayout>