<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="fill_parent" android:layout_height="wrap_content"
	tools:context=".PersonalFields" >


      <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:orientation="vertical">  

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/main_activity_gradient"
            android:contentDescription="@string/logo_imagen"
            android:maxHeight="@dimen/activity_vertical_margin"
            android:maxWidth="@dimen/activity_horizontal_margin"
            android:paddingTop="5dp"
            android:scaleType="center"
            android:src="@drawable/logo" />
              
        <!-- end of header  -->

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:text="@string/titulo_ingreso_datos"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#888888" />

        <TextView
            android:id="@+id/label_candidate_selected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/candidate_selected_label"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/value_candidate_selected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp" 
            android:textColor="#D7383E" />
      
    </LinearLayout> 

</ScrollView>
